RA-187: Reset Cache when the user confirm attendance
